@@ -52,6 +52,8 @@ Version 1.3.9+svn:
      for all types of anims, you can have multiple such anims using different
      frame names
  * miscellaneous and bug fixes:
+   * added a new log domain 'mp_server'
+   * added a new log level 'debug'
 
 Version 1.3.9:
  * campaigns:
